src/virtualhosts/www/css/snac.css
@import 'https://fonts.googleapis.com/css?family=Roboto:300,400';
@import 'https://fonts.googleapis.com/css?family=Droid+Sans:400';
@import 'https://fonts.googleapis.com/css?family=Crimson+Text:400,800';

/* Note: Calibri = Roboto and Minion Pro = Crimson Text */

body {
    padding-top: 70px;
    padding-bottom: 30px;
}
.navbar-inverse {
    background-image: -webkit-linear-gradient(top,#1f5c7c 0,#18596F 100%);
    background-image: -o-linear-gradient(top,#1f5c7c 0,#18596F 100%);
    background-image: -webkit-gradient(linear,left top,left bottom,from(#1f5c7c),to(#18596F));
    background-image: linear-gradient(to bottom,#1f5c7c 0,#18596F 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff1f5c7c', endColorstr='#ff18506F', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
    background-repeat: repeat-x;
    border-radius: 4px;
}


h1 {
    /*font-family: Crimson Text;*/
    font-family: Roboto;
    font-weight: 300;
    margin-bottom: 35px;
}

.search-results h4 {
    margin-top: 3px;
    margin-bottom: 3px;
    padding: 0px;
}

.search-results p {
    margin-bottom: 30px;
}

.search-results p.search-info {
    margin-bottom: 20px;
    font-size: 12px;
    color: #888888;
}

.search-results p.missing {
    color: #666666;
    font-style: italic;
}

.search-results p.identity-info {
    color: #666666;
    font-size: 10px;
    margin-bottom: 2px;
}

.search-results p.identity-info span {
    margin-right: 15px;
}

.snac-name-header {
    font-family: "Crimson Text";
    font-weight: 800;
    font-size: 35px;
    line-height: .5em;
}
.navbar-inverse .navbar-brand,
.navbar-inverse .navbar-nav li a {
    color: #D6E5F4;
}

.navbar-inverse .dropdown-menu li a {
    color: #333;
}

.theme-dropdown .dropdown-menu {
    position: static;
    display: block;
    margin-bottom: 20px;
}

.snac > p > .btn {
    margin: 5px 0;
}

.snac-hidden {
    display: none;
}

.snac .navbar .container {
    width: auto;
}

.control-label-subtext {
    font-size: 12px;
    font-weight: normal;
}.

.tab-pane {

    border-left: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-bottom: 1px solid #ddd;
    border-radius: 0px 0px 5px 5px;
    padding: 10px;
}

.nav-tabs {
    margin-bottom: 0;
}

.scm-modal {
    color: #000000;
}

.date-modal .modal-dialog {
    color: #000000;
    width: 790px;
}

.ui-autocomplete {
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    float: left;
    display: none;
    min-width: 160px;
    _width: 160px;
    padding: 4px 0;
    margin: 2px 0 0 0;
    list-style: none;
    background-color: #ffffff;
    border-color: #ccc;
    border-color: rgba(0, 0, 0, 0.2);
    border-style: solid;
    border-width: 1px;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    *border-right-width: 2px;
    *border-bottom-width: 2px;
}
.ui-menu-item > a.ui-corner-all {
    display: block;
    padding: 3px 15px;
    clear: both;
    font-weight: normal;
    line-height: 18px;
    color: #555555;
    white-space: nowrap;
}
&.ui-state-hover, &.ui-state-active {
    color: #ffffff;
    text-decoration: none;
    background-color: #0088cc;
    border-radius: 0px;
    -webkit-border-radius: 0px;
    -moz-border-radius: 0px;
    background-image: none;
}

.select2-container--bootstrap {
    display: inline-block;
    margin-bottom: 5px;
}

.select2-bootstrap-append .form-control-static {
    width: 100%;
    padding-right: 10px;
    display: table;
    text-align: left;
    table-layout: fixed;
    float:left;
}

.rotated-header {
    /* Safari */
    -webkit-transform: rotate(-90deg);
    /* Firefox */
    -moz-transform: rotate(-90deg);
    /* IE */
    -ms-transform: rotate(-90deg);
    /* Opera */
    -o-transform: rotate(-90deg);
    /* Internet Explorer */
    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
}

td.rotate {
    /* Something you can count on */
    height: 140px;
    white-space: nowrap;
}

td.rotate > div {
    transform:
    /* Magic Numbers */
    translate(25px, 51px)
    /* 45 is really 360 - 45 */
    rotate(315deg);
    width: 30px;
}
td.rotate > div > span {
    border-bottom: 1px solid #ccc;
    padding: 5px 10px;
}


.geoplace-map {
    height: 300px;
}


.move-handle {
    border: 0;
    background: transparent;
    cursor: grab;
}

/* centered columns styles */
.row-centered {
    text-align:center;
}
.col-centered {
    display:inline-block;
    float:none;
    /* reset the text-align */
    text-align:left;
    /* inline-block space fix */
    margin-right:-4px;
}

.subtext {
    margin-left: 22px;
    font-size: 11px;
}

.bioghist-text {
    margin-bottom: 15px;
}

/* Use the following to make other colors of list items */
.list-group-item-download {
    color: #7a3583;
    background-color: #ecdef2;
}
a.list-group-item-download,
button.list-group-item-download {
    color: #7a3583;
}
a.list-group-item-download .list-group-item-heading,
button.list-group-item-download .list-group-item-heading {
    color: inherit;
}
a.list-group-item-download:hover,
button.list-group-item-download:hover,
a.list-group-item-download:focus,
button.list-group-item-download:focus {
    color: #7a3583;
    background-color: #e1cceb;
}
a.list-group-item-download.active,
button.list-group-item-download.active,
a.list-group-item-download.active:hover,
button.list-group-item-download.active:hover,
a.list-group-item-download.active:focus,
button.list-group-item-download.active:focus {
    color: #fff;
    background-color: #7a3583;
    border-color: #7a3583;
}


.list-group-item-review {
    color: #AE5A0B;
    background-color: #F3ECE0;
}
a.list-group-item-review,
button.list-group-item-review {
    color: #AE5A0B;
}
a.list-group-item-review .list-group-item-heading,
button.list-group-item-review .list-group-item-heading {
    color: inherit;
}
a.list-group-item-review:hover,
button.list-group-item-review:hover,
a.list-group-item-review:focus,
button.list-group-item-review:focus {
    color: #AE5A0B;
    background-color: #EBD9CD;
}
a.list-group-item-review.active,
button.list-group-item-review.active,
a.list-group-item-review.active:hover,
button.list-group-item-review.active:hover,
a.list-group-item-review.active:focus,
button.list-group-item-review.active:focus {
    color: #fff;
    background-color: #AE5A0B;
    border-color: #AE5A0B;
}

/* Use the following to define new panel styles */
.panel-review {
    border-color: #FBDECE;
}
.panel-review > .panel-heading {
    color: #B84905;
    background-color: #FCE0CD;
    border-color: #FBDECE;
}
.panel-review > .panel-heading + .panel-collapse > .panel-body {
    border-top-color: #FBDECE;
}
.panel-review > .panel-heading .badge {
    color: #FCE0CD;
    background-color: #B84905;
}
.panel-review > .panel-footer + .panel-collapse > .panel-body {
    border-bottom-color: #FBDECE;
}


.loading-box {
    margin-top: 80px;
}

.loading-box p {
    font-size: 15px;
}

.loading-box i {
    font-size: 55px;
}

@media (min-width: 992px) {
    .affix {
        position: fixed;
        top: 62px;
        right: 0px;
        padding-right: 5%;
        z-index: 1000;
        display: block;
        overflow-x: hidden;
        overflow-y: hidden; /*auto; /* Scrollable contents if viewport is shorter than content. */
    }

    .affix-bottom {
        position: fixed;
        right: 0px;
        padding-right: 5%;
        z-index: 1000;
        display: block;
        overflow-x: hidden;
        overflow-y: hidden; /*auto; /* Scrollable contents if viewport is shorter than content. */
    }
}

